# zero2prod

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: general.yml
configuration/: base.yaml  local.yaml
migrations/: 20210401070455_create_subscriptions_table.sql
scripts/: init_db.sh
src/: configuration.rs  domain.rs  email_client.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/routes/: subscriptions.rs  subscriptions_confirm.rs
tests/: health_check.rs
tests/api/: health_check.rs  helpers.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
