[package]
name = "zero2prod"
version = "0.1.0"
authors = ["filmon97"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# We could use any path here, but we are following the community convention
# We could specify a library name using the`name`field. If unspecified,
# cargo will default to`package.name`, which is what we want.
path = "src/lib.rs"

# Notice the double square brackets: it's an array in TOML's syntax.
# We can only have one library in a project, but we can have multiple binaries!
# If you want to manage multiple libraries in the same repository
# have a look at the workspace feature - we'll cover it later on.
[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
# We are using the latest beta release of actix-web
# that relies on tokio 1.x.x
# There might be _some_ turbulence - it's a beta after all!
actix-web = ">=0.7.15"

[dev-dependencies]
actix-rt = "2"
reqwest = "0.11"
tokio = "1"

