[package]
name = "zero2prod"
version = "0.1.0"
authors = ["filmon-arefayne"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# We could use any path here, but we are following the community convention
# We could specify a library name using the`name`field. If unspecified,
# cargo will default to`package.name`, which is what we want.
path = "src/lib.rs"

# Notice the double square brackets: it's an array in TOML's syntax.
# We can only have one library in a project, but we can have multiple binaries!
# If you want to manage multiple libraries in the same repository
# have a look at the workspace feature - we'll cover it later on.
[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
# We are using the latest beta release of actix-web
# that relies on tokio 1.x.x
# There might be _some_ turbulence - it's a beta after all!
actix-web = "4.0.0-beta.4"
config = "0.11.0"
serde = { version = "1", features = ["derive"] }
uuid = { version = "0.8.1", features = ["v4"] }
chrono = "0.4.15"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.2.12", features = ["registry", "env-filter"] }
tracing-futures = "0.2.5"
tracing-bunyan-formatter = "0.2.0"
tracing-log = "0.1.2"
tracing-actix-web = "0.3.0-beta.2"
unicode-segmentation = "1.7.1"

[dependencies.sqlx]
version = "0.5.1"
default-features = false
features = [
    "runtime-actix-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
    "offline"
]

[dev-dependencies]
actix-rt = "2"
claim = "0.5.0"
lazy_static = "1.4.0"
reqwest = "0.11"
tokio = "1"

